[package]
name = "rs-basic1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }
log = { version = "0.4", features = ["kv_unstable_serde"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = { version = "0.27.0",  features=["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry = "0.27.0"
